# paper-wars

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
plugins/core/: core.tri
plugins/core/actions/: mod.tri  walkpath.tri
plugins/core/components/: groundMovement.tri  mod.tri  moved.tri  movementSpeed.tri  position.tri
src/: lib.rs
src/ecs/: ecs.tri
src/engine/: mod.rs
src/lib/: ecs.tri
src/plugin/: mod.rs
src/state/: mod.rs
