[package]
name = "paper-wars"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
actix-web = "4.5.1"
envy = "0.4.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
trilogy = { git = "https://github.com/foxfriends/trilogy", features = ["std", "regex", "json", "32bit"], default-features = false }
